Finalize: consolidate verbatim-duplicated test helpers into RealBspFixture
Behavior-preserving cleanup after the plan (all 20 ACs) and Codex code review
passed. No functional change: the moved helpers are byte-identical to the copies
they replace (only a debug-only pump thread-name string is unified), and no
production code or public assertion changes.

- RealBspFixture gains the shared `runProcess` (subprocess + output pump + timeout
  kill), `runFlags`, and `javaBin` — previously duplicated verbatim across the two
  AOT suites — alongside the already-public `copyTree`/`repoRoot`.
- RealBspIsolationTest drops its private `runProcess`/`runFlags`/`javaBin` and the
  now-unused java.io/charset imports, importing the fixture ones instead.
- AotTrainIntegrationTest drops its private `copyTree`/`runProcess`, its
  env.repoRoot/env.javaBin/runFlags, and seven now-unused imports; env keeps only
  the AOT-specific `jar`. Call sites reference the fixture helpers unchanged.
- check-docs.sh: remove the dead `missing_classes` counter (assigned/incremented
  but never read; `err` already sets fail=1). Pass/fail behavior unchanged.

Net -65 lines. Full gate `mill __.compile && mill __.test` 0 failed (9 suites
incl. LsEndToEndTest 22/22, PcBackendSuite 6/6, BenchSuite 8/8); gated AOT IT
`scripts/it-aot.sh` green (AotTrainIntegrationTest 2/2, RealBspIsolationTest E9
2/2 with E7 skipped) — exercising every moved helper against real Mill BSP + AOT
training; check-docs.sh green (77 case entries); marker grep + diff --check clean.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MSS7atZqduUvZUWZqEpXm6